@@ -105,6 +105,11 @@ $d || &usage("No virtual server named $dname found");
 	&usage("Virtual server $dname does not have SSL enabled");
 
 if ($self) {
+	# Break SSL linkages that no longer work with this cert
+	local $newcert = { 'cn' => $subject{'cn'} || "*.$d->{'dom'}",
+			   'alt' => \@alts };
+	&break_invalid_ssl_linkages($d, $newcert);
+
 	# Generate the self-signed cert, over-writing the existing file
 	&$first_print("Generating new self-signed certificate ..");
 	$d->{'ssl_cert'} ||= &default_certificate_file($d, 'cert');
