@@ -1352,3 +1352,4 @@ The disable-feature and enable-feature API commands now have flags to disassocai
 Virtual server owners can now be granted permission to create domains on a single IP address.
 Added an option to the restore form and a flag to restore-domain to ignore virtual servers that have failed.
 The default shell for new virtual servers on Linux systems is now bash, if installed.
+When the SSL certificate for a domain is changed, any domains which shared the old cert but cannot use the new one will be switched to a copy of the old cert file.
